--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,1 +1,14 @@
-Hola Mundo!!!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Java to JavaScript Migration</title>
+</head>
+<body>
+    <h1>Example</h1>
+    <div id="content">
+    </div>
+    <script type="module" src="js/main.js"></script>
+</body>
+</html>
