--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Example</h1>
-    <div id="content">
-    </div>
+    <pre id="content">
+    </pre>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
