--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,6 +9,6 @@
     <h1>Example</h1>
     <pre id="content">
     </pre>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
