--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+        <a href="#page1">Page 1</a>
+        <a href="#page2">Page 2</a>
+        <a href="#page3">Page 3</a>
     </nav>
     <div id="content">
         <!-- El contenido dinámico se cargará aquí -->
