--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,6 +11,8 @@
         <a href="#page1">Page 1</a>
         <a href="#page2">Page 2</a>
         <a href="#page3">Page 3</a>
+        <a href="#insurance-programmer-learning">ISP</a>
+        <a href="#semantictext.info/book">STXT</a>
     </nav>
     <div id="content">
         <!-- El contenido dinámico se cargará aquí -->
