--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <nav>
+        <a href="#">Home</a>
         <a href="#page1">Page 1</a>
         <a href="#page2">Page 2</a>
         <a href="#page3">Page 3</a>
-        <a href="#insurance-programmer-learning">ISP</a>
+        <a href="#insurance-programmer-learning/pyton">Python</a>
         <a href="#semantictext.info/book">STXT</a>
     </nav>
     <div id="content">
