--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,12 +11,13 @@
         <a href="/#">Home</a>
         <a href="/#page1">Page 1</a>
         <a href="/#page2">Page 2</a>
-        <a href="/#insurance-programmer-learning/python">Python</a>
-        <a href="/#semantictext.info/es/chapter_02">STXT</a>
+        <a href="/#insurance-programmer-learning/python/">Python</a>
+        <a href="/#semantictext.info/es/chapter_02/">STXT</a>
     </nav>
     <div id="content">
         <!-- El contenido dinámico se cargará aquí -->
     </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
