--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -8,16 +8,13 @@
 </head>
 <body>
     <nav>
-        <a href="#">Home</a>
-        <a href="#page1">Page 1</a>
-        <a href="#page2">Page 2</a>
-        <a href="#insurance-programmer-learning/python/">Python</a>
-        <a href="#semantictext.info/es/chapter_02">STXT</a>
+        <a href="#test1">Test 1</a>
+        <a href="#test2">Test 2</a>
     </nav>
     <div id="content">
         <!-- El contenido dinámico se cargará aquí -->
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="test.js"></script>
 </body>
 </html>
