--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -10,6 +10,7 @@
     <nav>
         <a href="#test1">Test 1</a>
         <a href="#test2">Test 2</a>
+        <a href="#constants">Constants</a>
     </nav>
     <div id="content">
         <!-- El contenido dinámico se cargará aquí -->
