--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <nav>
-        <a href="#test1">Test 1</a>
-        <a href="#test2">Test 2</a>
-        <a href="#constants">Constants</a>
+        <a href="#testConstants">testConstants</a>
+        <a href="#testParseException">testParseException</a>
     </nav>
     <div id="content">
         <!-- El contenido dinámico se cargará aquí -->
