--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav>
+        <a href="/test">HOME TEST</a>
         <a href="#testConstants">testConstants</a>
         <a href="#testParseException">testParseException</a>
     </nav>
