--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -11,10 +11,11 @@
         <a href="/test">HOME TEST</a>
         <a href="#testConstants">testConstants</a>
         <a href="#testParseException">testParseException</a>
+        <a href="#testLineIndent">testLineIndent</a>
     </nav>
-    <div id="content">
+    <pre id="content">
         <!-- El contenido dinámico se cargará aquí -->
-    </div>
+    </pre>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script type="module" src="test.js"></script>
 </body>
