--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <nav id="nav">
         <a href="/test">ALL TEST</a>
-        <a href="#testConstants">testConstants</a>
-        <a href="#testParseException">testParseException</a>
-        <a href="#testLineIndent">testLineIndent</a>
     </nav>
     <pre id="content">
         <!-- El contenido dinámico se cargará aquí -->
