--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <div id="nav">
         <a href="#">Home</a>
         <a href="#page1">Page 1</a>
         <a href="#page2">Page 2</a>
         <a href="#insurance-programmer-learning/python/">Python</a>
         <a href="#semantictext.info/es/chapter_02">STXT</a>
-    </nav>
+    </div>
     <div id="content">
         <!-- El contenido dinámico se cargará aquí -->
     </div>
