--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav id="nav">
+    <div id="nav">
         <a href="/test">ALL TEST</a>
-    </nav>
+    </div>
     <pre id="content">
         <!-- El contenido dinámico se cargará aquí -->
     </pre>
