--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,6 +12,7 @@
         <a href="#page1">Page 1</a>
         <a href="#page2">Page 2</a>
         <a href="#insurance-programmer-learning/python/">Python</a>
+        <a href="#insurance-programmer-learning/python/oop_base">OOP Python Base</a>
         <a href="#semantictext.info/es/chapter_02">STXT</a>
     </div>
     <div id="content">
