--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java to JavaScript Migration</title>
     <link rel="stylesheet" href="style.css">
+    <style type="text/css">#content {padding:2em;}</style>
 </head>
 <body>
     <div id="nav">
