--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,17 +10,28 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="site.css">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+	<style type="text/css">
+		#nav a {
+			display: inline-block;
+		}
+	</style>
 </head>
 
 <body>
-    <div id="nav">
-        <a href="#">Home</a>
-        <a href="#page1">Page 1</a>
-        <a href="#page2">Page 2</a>
-        <a href="#insurance-programmer-learning/python/">Python</a>
-        <a href="#insurance-programmer-learning/python/oop_base">OOP Python Base</a>
-        <a href="#semantictext.info/es/chapter_02">STXT</a>
-    </div>
+
+	<div id="nav" class="container-fluid p-1" style="background-color: #335;">
+		<div class="row">
+			<div class="col-12 p-0 text-center">
+		        <a href="#">Home</a>
+		        <a href="#page1">Page 1</a>
+		        <a href="#page2">Page 2</a>
+		        <a href="#insurance-programmer-learning/python/">Python</a>
+		        <a href="#insurance-programmer-learning/python/oop_base">OOP Python Base</a>
+		        <a href="#semantictext.info/es/chapter_02">STXT</a>
+			</div>
+		</div>
+	</div>
+
     <div id="content">
         <!-- El contenido dinámico se cargará aquí -->
     </div>
