--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -35,6 +35,7 @@
         <!-- El contenido dinámico se cargará aquí -->
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
