--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -15,6 +15,7 @@
         <!-- El contenido dinámico se cargará aquí -->
     </pre>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script type="module" src="test.js"></script>
 </body>
 </html>
