--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -1,8 +1,7 @@
 <html>
 <head>
-<script type="text/javascript" src="jquery.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script type="text/javascript" src="jquery_plantuml.js"></script>
-<!-- rawdeflate.js is implicity used by jquery_plantuml.js -->
 </head>
 
 <body>
