--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,12 +7,17 @@
     <title></title>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<!-- 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="site.css">
+     -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<style type="text/css">
 		#nav a {
 			display: inline-block;
+		}
+		h1, h2, .publi, .code, img, #main_header {
+			display:none;
 		}
 	</style>
 </head>
