--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -42,7 +42,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script type="text/javascript" src="jquery_plantuml.js"></script>
+    <script type="text/javascript" src="js-ext/jquery_plantuml.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
