--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,8 +8,8 @@
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="site.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/site.css">
      -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	<style type="text/css">
