--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,23 +23,8 @@
 </head>
 
 <body>
-	<!-- 
-	<div id="nav" class="container-fluid p-1" style="background-color: #335;">
-		<div class="row">
-			<div class="col-12 p-0 text-center">
-		        <a href="#">Home</a>
-		        <a href="#page1">Page 1</a>
-		        <a href="#page2">Page 2</a>
-		        <a href="#insurance-programmer-learning/python/">Python</a>
-		        <a href="#semantictext.info/es/chapter_02">STXT</a>
-			</div>
-		</div>
-	</div>
-	 -->
-
-    <div id="content">
-        <!-- El contenido dinámico se cargará aquí -->
-    </div>
+    <div id="content"></div>
+    
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script type="text/javascript" src="js-ext/jquery_plantuml.js"></script>
